--- a/busca.html
+++ b/busca.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar Produtos</title>
+    <title>Catálogo</title>
+    <!-- CSS-link -->   
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="accessibility.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="accessibility.css">
     <script type="text/javascript">
@@ -20,66 +35,8 @@
     
     <!-- Script do VLibras -->
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <style>
-        .search-container {
-            margin-top: 100px;
-            padding: 20px;
-        }
-
-        .search-box {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 30px;
-        }
-
-        .search-input {
-            width: 50%;
-            padding: 15px;
-            font-size: 16px;
-            border: 2px solid #4CAF50;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-
-        .search-button {
-            padding: 15px 30px;
-            background: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .search-results {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-
-        .product-card {
-            border: 1px solid #ddd;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .product-card img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-        }
-
-        .product-card h3 {
-            margin: 10px 0;
-        }
-
-        .product-card p {
-            color: #4CAF50;
-            font-weight: bold;
-        }
-    </style>
 </head>
+
 <body>
     <!-- Elemento do VLibras -->
     <div vw class="enabled">
@@ -135,69 +92,266 @@
     </div>
 
     <header id="navbar">
-        <a href="index.html" class="logo"><img src="imagem/logo.png" alt=""></a>
+        <a href="#" class="logo"><img src="imagem/logo.png" alt=""></a>
 
         <ul class="navmenu">
             <li><a href="index.html">home</a></li>
-            <li><a href="plantas.html">Flores</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="#">Flores</a></li>
+            <li><a href="contato.html">contato</a></li>
         </ul>
 
         <div class="nav-icon">
             <a href="busca.html"><i class='bx bx-search'></i></a>
             <a href="login.html"><i class='bx bx-user'></i></a>
             <a href="carrinho.html"><i class='bx bx-cart'></i></a>
+
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
 
-    <div class="search-container">
-        <div class="search-box">
-            <input type="text" class="search-input" placeholder="Buscar produtos...">
-            <button class="search-button">Buscar</button>
+   
+
+    <!-- seção de produtos  -->
+    <section class="trending-product" id="trending">
+        <div class="center-text" style="margin-top: 80px;"> 
+            <h2>Cat<span>álogo</span></h2>
         </div>
 
-        <div class="search-results">
-            <!-- Resultados serão inseridos aqui via JavaScript -->
+        <div class="products">
+            <div class="row">
+                <img src="imagem/1.jpg" alt="" href="produto1.html">
+                <div class="product-text">
+                    <h5>Oferta</h5> 
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+        
+
+                <div class="price">
+                    <h4> Hibisco (Hibiscus rosa-sinensis)</h4>
+                    <p>R$15 - R$49<p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/2.jpg" alt="" width="600px">
+                <div class="product-text">
+                    <h5>New</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Helicônia (Heliconia rostrata)</h4>
+                    <p>R$28 - R$80</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/3.jpg" alt="">
+
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Alpínia (Alpinia purpurata)</h4>
+                    <p>R$24 - R$54</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/4.jpg" alt="">
+                <div class="product-text">
+                    <h5>Hot</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Costus (Costus woodsonii)</h4>
+                    <p>R$19 - R$47</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/5.jpg" alt="">
+
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Bromélia (Bromeliaceae)</h4>
+                    <p>R$31 - R$110</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/6.jpg" alt="">
+                <div class="product-text">
+                    <h5>Hot</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Estrelícia (Strelitzia reginae)</h4>
+                    <p>R$27 - R$120</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/7.jpg" alt="">
+                <div class="product-text">
+                    <h5>Sale</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4> Orquídea Cattleya (Cattleya spp.)</h4>
+                    <p>R$32 - R$159</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <img src="imagem/8.jpg" alt="">
+                <div class="product-text">
+                    <h5>Sale</h5>
+                </div>
+                <div class="heart-icon">
+                    <i class='bx bx-heart'></i>
+                </div>
+                <div class="ratting">
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bx-star'></i>
+                    <i class='bx bxs-star-half'></i>
+                </div>
+
+                <div class="price">
+                    <h4>Antúrio (Anthurium andraeanum)</h4>
+                    <p>R$89 - R$299</p>
+                </div>
+            </div>
         </div>
+
+    </section>
+
+    <!-- seção-de-contato -->
+    <section class="contact">
+        <div class="contact-info">
+            <div class="first-info">
+                <img src="imagem/logo.png" alt="">
+
+                <p>1993 Tão Tão Distante, <br> Pernambuco Brasil - 4002-8922</p>
+                <p>81 97070-7069</p>
+                <p>florafrevot@gmail.com</p>
+
+                <div class="social-icon">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-twitter'></i></a>
+                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-youtube'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
+                </div>
+            </div>
+
+            <div class="second-info">
+                <h4>Suporte</h4>
+                <p>Contate-Nos</p>
+                <p>Sobre A Pgina</p>
+                <p>Guia De Tamanho</p>
+                <p>Compras E Devoluções</p>
+                <p>Privacidade</p>
+            </div>
+
+            <div class="third-info">
+                <h4>Comprar</h4>
+                <p>Tipos de Plantas</p>
+                <p>Tamanho e Estilo de Crescimento</p>
+                <p>Necessidade de Luz e Uso</p>
+            </div>
+
+            <div class="fourth-info">
+                <h4>EMPRESA</h4>
+                <p>Sobre</p>
+                <p>Blog</p>
+                <p>Afiliado</p>
+                <p>Conecte-Se</p>
+            </div>
+
+        </div>
+    </section>
+
+    <div class="end-text">
+        <p>Copyright © @2024. Todos os direitos reservados. Projetado por Kauã Júlio.</p>
     </div>
 
+
+
+
+
+
+    <script src="java.js"></script>
     <script src="accessibility.js"></script>
-    <script>
-        // Simulação de busca
-        const searchButton = document.querySelector('.search-button');
-        const searchInput = document.querySelector('.search-input');
-        const searchResults = document.querySelector('.search-results');
 
-        const products = [
-            { name: 'Costela-de-Adão', price: 'R$60 - R$149', image: 'imagem/1.jpg' },
-            { name: 'Palmeira Areca', price: 'R$50 - R$159', image: 'imagem/2.jpg' },
-            { name: 'Filodendro', price: 'R$39 - R$128', image: 'imagem/3.jpg' },
-            // Adicione mais produtos conforme necessário
-        ];
-
-        searchButton.addEventListener('click', () => {
-            const searchTerm = searchInput.value.toLowerCase();
-            const filteredProducts = products.filter(product => 
-                product.name.toLowerCase().includes(searchTerm)
-            );
-
-            displayResults(filteredProducts);
-        });
-
-        function displayResults(results) {
-            searchResults.innerHTML = '';
-            results.forEach(product => {
-                const productCard = `
-                    <div class="product-card">
-                        <img src="${product.image}" alt="${product.name}">
-                        <h3>${product.name}</h3>
-                        <p>${product.price}</p>
-                    </div>
-                `;
-                searchResults.innerHTML += productCard;
-            });
-        }
-    </script>
 </body>
-</html> 
+
+</html>
