--- a/carrinho.html
+++ b/carrinho.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="accessibility.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+        
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -173,18 +179,18 @@
     </header>
 
     <div class="cart-container">
-        <h1 class="cart-title">Carrinho de Compras</h1>
+        <h1 class="cart-title" style="color: white">Carrinho de Compras</h1>
         
         <div class="cart-items">
             <!-- Exemplo de item no carrinho -->
             <div class="cart-item">
                 <img src="imagem/1.jpg" alt="Costela-de-Adão">
                 <div class="item-details">
-                    <h3>Costela-de-Adão</h3>
-                    <p>R$149,00</p>
+                    <h3 style="color: white">Costela-de-Adão</h3>
+                    <p style="color: white">R$149,00</p>
                     <div class="item-quantity">
                         <button class="quantity-btn">-</button>
-                        <span>1</span>
+                        <span style="color: white">1</span>
                         <button class="quantity-btn">+</button>
                         <button class="quantity-btn" style="margin-left: 10px;">Remover</button>
                     </div>
