--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="products">
             <div class="row">
-                <a href="produto1.html"><img src="imagem/1.jpg" alt=""></a>
+                <a href="pagProdutos/produto1.html"><img src="imagem/1.jpg" alt=""></a>
                 <div class="product-text">
                     <h5>Oferta</h5> 
                 </div>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/2.jpg" alt="" width="600px">
+                <a href="pagProdutos/produto2.html"><img src="imagem/2.jpg" alt="" width="600px"></a>
                 <div class="product-text">
                     <h5>New</h5>
                 </div>
@@ -178,7 +178,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/3.jpg" alt="">
+                <a href="pagProdutos/produto3.html"><img src="imagem/3.jpg" alt=""></a>
 
                 <div class="heart-icon">
                     <i class='bx bx-heart'></i>
@@ -198,7 +198,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/4.jpg" alt="">
+                <a href="pagProdutos/produto4.html"><img src="imagem/4.jpg" alt=""></a>
                 <div class="product-text">
                     <h5>Hot</h5>
                 </div>
@@ -220,7 +220,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/5.jpg" alt="">
+                <a href="pagProdutos/produto5.html"><img src="imagem/5.jpg" alt=""></a>
 
                 <div class="heart-icon">
                     <i class='bx bx-heart'></i>
@@ -240,7 +240,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/6.jpg" alt="">
+                <a href="pagProdutos/produto6.html"><img src="imagem/6.jpg" alt=""></a>
                 <div class="product-text">
                     <h5>Hot</h5>
                 </div>
@@ -262,7 +262,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/7.jpg" alt="">
+                <a href="pagProdutos/produto7.html"><img src="imagem/7.jpg" alt=""></a>
                 <div class="product-text">
                     <h5>Sale</h5>
                 </div>
@@ -284,7 +284,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/8.jpg" alt="">
+                <a href="pagProdutos/produto8.html"><img src="imagem/8.jpg" alt=""></a>
                 <div class="product-text">
                     <h5>Sale</h5>
                 </div>
