--- a/plantas.html
+++ b/plantas.html
@@ -101,9 +101,25 @@
         </ul>
 
         <div class="nav-icon">
-            <a href="#"><i class='bx bx-search'></i></a>
+            <a href="busca.html"><i class='bx bx-search'></i></a>
             <a href="login.html"><i class='bx bx-user'></i></a>
-            <a href="#"><i class='bx bx-cart'></i></a>
+            <a href="carrinho.html"><i class='bx bx-cart'></i></a>
+
+            <button id="increase-text" aria-label="Aumentar texto">
+                <i class='bx bx-zoom-in'></i>
+            </button>
+            <button id="decrease-text" aria-label="Diminuir texto">
+                <i class='bx bx-zoom-out'></i>
+            </button>
+            <button id="toggle-contrast" aria-label="Alto contraste">
+                <i class='bx bx-adjust'></i>
+            </button>
+            <button id="toggle-dark-mode" aria-label="Modo escuro">
+                <i class='bx bx-moon'></i>
+            </button>
+            <button id="reset-accessibility" aria-label="Resetar configurações">
+                <i class='bx bx-reset'></i>
+            </button>
 
             <div class="bx bx-menu" id="menu-icon"></div>
         </div>
