--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <ul class="navmenu">
             <li><a href="index.html">home</a></li>
             <li><a href="plantas.html">Flores</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="contato.html">contato</a></li>
         </ul>
 
         <div class="nav-icon">
