--- a/plantas.html
+++ b/plantas.html
@@ -53,51 +53,14 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <!-- Menu de Acessibilidade -->
-    <div id="accessibility-menu" class="accessibility-menu">
-        <button class="accessibility-toggle" aria-label="Abrir menu de acessibilidade">
-            <i class='bx bx-universal-access'></i>
-        </button>
-        <div class="accessibility-content">
-            <div class="accessibility-header">
-                <h3>Acessibilidade</h3>
-                <button class="close-accessibility" aria-label="Fechar menu de acessibilidade">
-                    <i class='bx bx-x'></i>
-                </button>
-            </div>
-            <div class="accessibility-options">
-                <button id="increase-text" aria-label="Aumentar texto">
-                    <i class='bx bx-zoom-in'></i> Aumentar Texto
-                </button>
-                <button id="decrease-text" aria-label="Diminuir texto">
-                    <i class='bx bx-zoom-out'></i> Diminuir Texto
-                </button>
-                <button id="toggle-contrast" aria-label="Alto contraste">
-                    <i class='bx bx-adjust'></i> Alto Contraste
-                </button>
-                <button id="toggle-dark-mode" aria-label="Modo escuro">
-                    <i class='bx bx-moon'></i> Modo Escuro
-                </button>
-                <button id="reset-accessibility" aria-label="Resetar configurações">
-                    <i class='bx bx-reset'></i> Resetar
-                </button>
-                <button id="toggle-language" aria-label="Alternar idioma"></button>
-                    <i class='bx bx-globe'></i> Traduzir Site
-                </button>
-                <button id="toggle-libras" aria-label="Tradutor de Libras">
-                    <i class='bx bx-conversation'></i> VLibras
-                </button>
-            </div>
-        </div>
-    </div>
 
     <header id="navbar">
         <a href="#" class="logo"><img src="imagem/logo.png" alt=""></a>
 
         <ul class="navmenu">
             <li><a href="index.html">home</a></li>
-            <li><a href="#">Flores</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="plantas.html">Flores</a></li>
+            <li><a href="contato.html">contato</a></li>
         </ul>
 
         <div class="nav-icon">
@@ -158,7 +121,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/2.jpg" alt="" width="600px">
+                <img src="imagem/2.jpg" alt=""width="600px" href="pagProdutos/produto2.html">
                 <div class="product-text">
                     <h5>New</h5>
                 </div>
