--- a/plantas.html
+++ b/plantas.html
@@ -121,7 +121,7 @@
             </div>
 
             <div class="row">
-                <img src="imagem/2.jpg" alt=""width="600px" href="pagProdutos/produto2.html">
+                <img src="imagem/2.jpg" alt=""width="600px">
                 <div class="product-text">
                     <h5>New</h5>
                 </div>
