--- a/html/login.html
+++ b/html/login.html
@@ -103,8 +103,10 @@
         </ul>
 
         <div class="nav-icon">
-    
-            <!-- Botões de acessibilidade (removidos VLibras e Tradutor) -->
+            <a href="busca.html"><i class='bx bx-search'></i></a>
+
+            
+            <!-- Botões de acessibilidade  -->
             <button id="increase-text" aria-label="Aumentar texto">
                 <i class='bx bx-zoom-in'></i>
             </button>
