Implementação da página de busca e mais algumas alterações

--- a/pagProdutos/produto2.html
+++ b/pagProdutos/produto2.html
@@ -54,8 +54,8 @@
             <img class="header__hamburger-menu" src="./assets/icons/icon-menu.svg" alt="Acesso ao menu">
             <img class="header__logo" src="/ecommerce/imagem/logo.png" alt="Logotipo - Flora Frevo">
             <ul class="product-page__header--nav">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/plantas.html">Flores</a></li>
+                <li><a href="/ecommerce/index.html">Home</a></li>
+                <li><a href="/ecommerce/plantas.html">Flores</a></li>
                 <li><a href="/ecommerce/contato.html">Contato</a></li>
             </ul>
         </nav>
