--- a/pagProdutos/produto4.html
+++ b/pagProdutos/produto4.html
@@ -100,7 +100,7 @@
     <header class="product-page__header">
         <nav class="header__left">
             <img class="header__hamburger-menu" src="./assets/icons/icon-menu.svg" alt="Acesso ao menu">
-            <img class="header__logo" src="./assets/icons/logo.svg" alt="Logotipo - Flora Frevo">
+            <img class="header__logo" src="/ecommerce/imagem/logo.png" alt="Logotipo - Flora Frevo">
             <ul class="product-page__header--nav">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/plantas.html">Flores</a></li>
