Implementação do CHATBOT

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="accessibility.css">
+    <link rel="stylesheet" href="css/chatbot.css">
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -393,6 +394,7 @@
 
     <script src="java.js"></script>
     <script src="accessibility.js"></script>
+    <script src="js/chatbot.js"></script>
 
 </body>
 
