--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="index.html">home</a></li>
             <li><a href="plantas.html">Flores</a></li>
             <li><a href="contato.html">contato</a></li>
+            <li><a href="SobreNos.html">Sobre</a></li>
         </ul>
 
         <div class="nav-icon">
