--- a/login.html
+++ b/login.html
@@ -94,17 +94,19 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <header id="navbar"></header>
+    <header id="navbar">
         <a href="#" class="logo"><img src="imagem/logo.png" alt=""></a>
 
         <ul class="navmenu">
             <li><a href="index.html">home</a></li>
-
         </ul>
 
         <div class="nav-icon">
-    
-            <!-- Botões de acessibilidade (removidos VLibras e Tradutor) -->
+            <a href="busca.html"><i class='bx bx-search'></i></a>
+            <a href="login.html"><i class='bx bx-user'></i></a>
+            <a href="carrinho.html"><i class='bx bx-cart'></i></a>
+            
+            <!-- Botões de acessibilidade -->
             <button id="increase-text" aria-label="Aumentar texto">
                 <i class='bx bx-zoom-in'></i>
             </button>
